# logcomex_case

./: .gitignore  README.md  pyproject.toml
models/: best_deep_model.pth
notebooks/eda/: 00_first_eda.py  01_eda_kmodes_mca.py  02_eda_kmodes_tsne.py  03_eda_kmodes_silhoutte.py  04_questions.py  mlflow.db
notebooks/eda/mlruns/2/23a1fdfea36a4b8a98baa9fe2e8310ce/artifacts/: classification_report.txt
notebooks/eda/mlruns/2/8a0e7ae3dc96490c8f22c6038e0103d2/artifacts/: classification_report.txt
notebooks/processing/: 00_mca_processing.py  01_split_dataset.py  02_timeseries_approach.py  03_processing_without_mca.py
notebooks/training/: 00_classicalmodel.py  00_classicalmodel_mca.py  01_deepmodel_mca.py  02_forecasting.py  03_classicalmodel.py  classification_report.txt  mlflow.db
notebooks/training/lightning_logs/version_0/: hparams.yaml  metrics.csv
notebooks/training/lightning_logs/version_0/checkpoints/: epoch=4-step=1250.ckpt  epoch=7-step=2000.ckpt  epoch=8-step=2250.ckpt
notebooks/training/lightning_logs/version_1/: hparams.yaml  metrics.csv
notebooks/training/lightning_logs/version_1/checkpoints/: epoch=13-step=3500.ckpt  epoch=20-step=5250.ckpt  epoch=7-step=2000.ckpt
notebooks/training/lightning_logs/version_2/: hparams.yaml  metrics.csv
notebooks/training/lightning_logs/version_2/checkpoints/: epoch=2-step=750.ckpt  epoch=4-step=1250.ckpt  epoch=6-step=1750.ckpt
notebooks/training/mlruns/2/4865f3fd551742688ae3d5637e040d04/artifacts/: model_summary.txt
src/: ts_preprocessing.py
(+25 files in other folders)
