[project]
name = "logcomex-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
]
dev = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.2.0",
    "pyarrow>=23.0.1",
]
ml = [
    "scikit-learn>=1.8.0",
]
