[project]
name = "logcomex-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "mlflow>=1.27.0",
    "numpy>=2.4.2",
    "pandas>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
]
dev = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.2.0",
    "pyarrow>=15.0.0,<23.0.0",
]
ml = [
    "kmodes>=0.12.2",
    "lightgbm>=4.6.0",
    "lightning>=2.6.1",
    "mlflow>=2.10.0",
    "optuna>=4.7.0",
    "prince>=0.16.5",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
]
